--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sup Guys</title>
+    <title>TrainTime</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
 </head>
 <body>
+    <div class="container">
+        <div class="row"> 
+            <div class="col-6 col-sm-6 col-md-8 col-md-8 col-lg-10">  
+            <div class="card bg-light mt-2 px-2 pt-2" style="width: 30rem;">
+                <div class="card-header">
+                    User Information
+                </div>
+                <div class="form-group">
+                    <label for="trainName">First Name</label>
+                    <input type="text" class="form-control" id="name-first">
+                </div>
+                <div class="form-group">
+                    <label for="destination">Last Name</label>
+                    <input type="text" class="form-control" id="name-last">
+                </div>
+                <div class="form-group">
+                    <label for="trainName">Email</label>
+                    <input type="email" class="form-control" id="email">
+                </div>
+                <div class="form-group">
+                    <label for="trainName">Location/Zip</label>
+                    <input type="text" class="form-control" id="location">
+                </div>
+                <button type="button" class="btn btn-primary mb-2 mx-2" id = "submit" style="width: 10rem;">submit</button>
+            </div>
+            </div>
+        </div>
+    </div>
+  
     
+    <script src="assets/javascript/Favorites.js"></script>
 </body>
 </html>
