initial header layout for medium + screens complete

--- a/content.html
+++ b/content.html
@@ -15,27 +15,27 @@
 
 <body class="bg-light">
     <div class="container container-fluid">
-        <div id="row-header" class="row col bg-white mb-0 mb-md-3 border border-muted align-items-center">
-            <div id="header-logo" class="col col-md-2 text-center">
-                LOGO HERE
+        <div id="row-header" class="row pl-3 bg-white border border-muted align-items-center">
+            <div id="header-logo" class="col col-md-1 text-center">
+                <img id="imgLogo" class="header-imgs" src="assets/images/logo.png" alt="logo MyReviews">
             </div>
-            <div id="header-brand" class="col col-md-2 text-center">
+            <div id="header-brand" class="col col-md-3">
                 MyReviews
             </div>
-            <div id="header-userInfo" class="col-md-8">
+            <div id="header-userInfo" class="col-md-8 pr-md-5">
                 <div id="row-avatar" class="row">
-                    <div id="avatar" class="col text-right">
-                        Avatar IMG here
+                    <div id="avatar" class="col text-right pr-md-4 ">
+                        <img id="imgAvatar" class="header-imgs" src="assets/images/avatars/avatar-placeholder.png" alt="Avatar">
                     </div>
                 </div>
                 <div id="row-username" class="row">
-                    <div id="username" class="col text-right">
-                        username
+                    <div id="username" class="col text-right pr-md-1">
+                        <a href="index.html">not &lt;username&gt;?</a>  
                     </div>  
                 </div>
             </div>
         </div>
-        <div id="row-content" class="row mb-0 mb-md-3">
+        <div id="row-content" class="row">
             <div id="review-categories" class="col col-md-4">
                 CATEGORIES GO HERE
             </div>
@@ -43,8 +43,8 @@
                     REVIEWS GO HERE
             </div>
         </div>
-        <div id="row-footer" class="row  mb-0 mb-md-3">
-            <div id="footer" class="col px-0">
+        <div id="row-footer" class="row">
+            <div id="footer" class="col">
                 FOOTER GOES HERE
             </div>
         </div>
