made header responsive for mobile and added a bottom border...moving on to row-content next

--- a/content.html
+++ b/content.html
@@ -16,13 +16,13 @@
 <body class="bg-light">
     <div class="container container-fluid">
         <div id="row-header" class="row pl-3 bg-white border border-muted align-items-center">
-            <div id="header-logo" class="col col-md-1 text-center">
+            <div id="header-logo" class="col-2 col-md-2 text-center">
                 <img id="imgLogo" class="header-imgs" src="assets/images/logo.png" alt="logo MyReviews">
             </div>
-            <div id="header-brand" class="col col-md-3">
+            <div id="header-brand" class="col-4 col-md-3">
                 MyReviews
             </div>
-            <div id="header-userInfo" class="col-md-8 pr-md-5">
+            <div id="header-userInfo" class="col-4 col-md-7 pr-md-5">
                 <div id="row-avatar" class="row">
                     <div id="avatar" class="col text-right pr-md-4 ">
                         <img id="imgAvatar" class="header-imgs" src="assets/images/avatars/avatar-placeholder.png" alt="Avatar">
