removed left padding on Brand Name for better positioning

--- a/content.html
+++ b/content.html
@@ -19,7 +19,7 @@
             <div id="header-logo" class="col-2 col-md-2 text-center">
                 <img id="imgLogo" class="header-imgs" src="assets/images/logo.png" alt="logo MyReviews">
             </div>
-            <div id="header-brand" class="col-4 col-md-3">
+            <div id="header-brand" class="col-4 col-md-3 pl-0">
                 MyReviews
             </div>
             <div id="header-userInfo" class="col-4 col-md-7 pr-md-5">
