content row create review button and main content text instructions placed.  Need to work on making  the "Welcome" test a div with Alert "info" bgcolor

--- a/content.html
+++ b/content.html
@@ -36,11 +36,14 @@
             </div>
         </div>
         <div id="row-content" class="row">
-            <div id="review-categories" class="col col-md-4">
-                CATEGORIES GO HERE
+            <div id="review-categories" class="col-12 col-md-3 px-0">
+                <button id="bttn-createReview" class="w-100 py-3 m-0 h3">Create Review</button>
             </div>
-            <div id="review-content" class="col col-md-8">
-                    REVIEWS GO HERE
+            <div id="review-content" class="col-12 col-md-9">
+                    
+                <p class="h3">Welcome to MyReviews!!</p>
+                <p class="h6">To get started with your first review, click the "Create Review" button in the top left</p>
+
             </div>
         </div>
         <div id="row-footer" class="row">
