Completed review-content "welcome-msg" on emty review

--- a/content.html
+++ b/content.html
@@ -36,14 +36,14 @@
             </div>
         </div>
         <div id="row-content" class="row">
-            <div id="review-categories" class="col-12 col-md-3 px-0">
+            <div id="review-categories" class="col col-12 col-md-3 px-0">
                 <button id="bttn-createReview" class="w-100 py-3 m-0 h3">Create Review</button>
             </div>
-            <div id="review-content" class="col-12 col-md-9">
-                    
-                <p class="h3">Welcome to MyReviews!!</p>
-                <p class="h6">To get started with your first review, click the "Create Review" button in the top left</p>
-
+            <div id="review-content" class="col col-12 col-md-9">
+                <div id="welcome-msg" class="mx-auto my-5 p-5 w-75 rounded text-center alert-info text-white">       
+                    <p class="h3 mb-3">Welcome to MyReviews!!</p>
+                    <p class="h6">To get started with your first review, click the "Create Review" button</p>
+                </div>  
             </div>
         </div>
         <div id="row-footer" class="row">
