close to complete for initial design

--- a/content.html
+++ b/content.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="bg-light">
-    <div class="container container-fluid">
+    <div class="container container-fluid border">
         <div id="row-header" class="row pl-3 bg-white border border-muted align-items-center">
             <div id="header-logo" class="col-2 col-md-2 text-center">
                 <img id="imgLogo" class="header-imgs" src="assets/images/logo.png" alt="logo MyReviews">
@@ -47,8 +47,14 @@
             </div>
         </div>
         <div id="row-footer" class="row">
-            <div id="footer" class="col">
-                FOOTER GOES HERE
+            <div id="footer-left" class="col-3 footer text-center text-white">
+                <img id="imgSkull" class="footer-imgs" src="assets/images/skull.png" alt="Skull">
+            </div>
+            <div id="footer-center" class="col footer text-center text-white align-self-end">
+                Copyright © 2019  Exceptional Pirates Inc
+            </div>
+            <div id="footer-right" class="col-3 footer text-center text-white">
+                <img id="imgShip" class="footer-imgs" src="assets/images/flag.gif" alt="flag">
             </div>
         </div>
     </div>
