sticky footer at bottom and stretched the review content div down to the footer along with other minor style changes

--- a/content.html
+++ b/content.html
@@ -13,9 +13,9 @@
     <title>MyReviews</title>
 </head>
 
-<body class="bg-light">
-    <div class="container container-fluid border">
-        <div id="row-header" class="row pl-3 bg-white border border-muted align-items-center">
+<body>
+    <div class="container container-fluid border bg-light">
+        <div id="row-header" class="row pl-3 bg-white border align-items-center">
             <div id="header-logo" class="col-2 col-md-2 text-center">
                 <img id="imgLogo" class="header-imgs" src="assets/images/logo.png" alt="logo MyReviews">
             </div>
@@ -36,21 +36,30 @@
             </div>
         </div>
         <div id="row-content" class="row">
-            <div id="review-categories" class="col col-12 col-md-3 px-0">
+            <div id="review-categories" class="col col-12 col-md-3 col-content px-0">
                 <button id="bttn-createReview" class="w-100 py-3 m-0 h3">Create Review</button>
+                <div id="cat-beer" class="category-items w-100 h3 text-white">
+                    Beer
+                </div>
+                <div id="cat-restaurants" class="category-items w-100 h3 text-white">
+                    Restaurants
+                </div>
             </div>
-            <div id="review-content" class="col col-12 col-md-9">
+            <div id="review-content" class="col col-12 col-md-9 col-content">
                 <div id="welcome-msg" class="mx-auto my-5 p-5 w-75 rounded text-center alert-info text-white">       
                     <p class="h3 mb-3">Welcome to MyReviews!!</p>
                     <p class="h6">To get started with your first review, click the "Create Review" button</p>
                 </div>  
             </div>
         </div>
+    </div>
+    <!-- To get the sticky footer (fixed-bottom) to fit the same with as the rest of the site -->
+    <div class="container fixed-bottom">  
         <div id="row-footer" class="row">
             <div id="footer-left" class="col-3 footer text-center text-white">
                 <img id="imgSkull" class="footer-imgs" src="assets/images/skull.png" alt="Skull">
             </div>
-            <div id="footer-center" class="col footer text-center text-white align-self-end">
+            <div id="footer-center" class="col footer pb-2 text-center text-white align-self-end">
                 Copyright © 2019  Exceptional Pirates Inc
             </div>
             <div id="footer-right" class="col-3 footer text-center text-white">
