initial row of the review-content-item form...working my way down

--- a/content-form.html
+++ b/content-form.html
@@ -45,11 +45,28 @@
                     Restaurants
                 </div>
             </div>
+
             <div id="review-content" class="col col-12 col-md-9 col-content">
-                <form>
-                    FORM STUFF HERE
-                </form> 
+                <div id="review-content-item" class="m-4 p-3 bg-white border shadow-default">
+                    <form>
+                        <div class="row">
+                            <div class="col">
+                                <img id="review-img" class="ml-5" src="assets/images/avatars/avatar-placeholder.png" alt="Review Item Name">
+                            </div>
+                            <div class="col">
+                                <select id="review-categories-select" class="form-control-lg mr-5 mt-5">
+                                    <option selected>Choose Category...</option>
+                                    <option value="Beer">Beer</option>
+                                    <option value="Restaurant">Restaurant</option>
+                                </select>
+                            </div>
+                        </div>
+                    </form>
+                </div> 
             </div>
+
+
+
         </div>
     </div>
     <!-- To get the sticky footer (fixed-bottom) to fit the same with as the rest of the site -->
