--- a/content.html
+++ b/content.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div id="review-content" class="col col-12 col-md-9 col-content">
-                <div id="welcome-msg" class="mx-auto my-5 p-5 w-75 rounded text-center alert-info text-white">       
+                <div id="welcome-msg" class="mx-auto my-5 p-5 w-75 rounded text-center alert-info text-white shadow-default">       
                     <p class="h3 mb-3">Welcome to MyReviews!!</p>
                     <p class="h6">To get started with your first review, click the "Create Review" button</p>
                 </div>  
