--- a/content-form.html
+++ b/content-form.html
@@ -31,8 +31,8 @@
                 </div>
                 <div id="row-username" class="row">
                     <div id="username" class="col text-right pr-md-1">
-                        <a href="index.html">not &lt;username&gt;?</a>  
-                    </div>  
+                        <a href="index.html">not &lt;username&gt;?</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -47,39 +47,39 @@
                 </div>
             </div>
 
-            <div id="review-content" class="col col-12 col-md-9 col-content">
-                <div id="review-content-item" class="m-4 p-3 bg-white border shadow-default">
+            <div id="review-content" class="col col-12 col-md-8 col-content ml-md-4 my-md-5 p-3 bg-white border">
+                <!-- <div id="review-content-item" class="m-4 p-3 bg-white border shadow-default"> -->
                     <div class="row">
                         <div class="col">
                             <div class="row justify-content-center">
-                            <img id="review-img" class="mb-2" src="assets/images/avatars/avatar-placeholder.png" alt="Review Item Name">
+                                <img id="review-img" class="mb-2" src="assets/images/avatars/avatar-placeholder.png"
+                                    alt="Review Item Name">
                             </div>
                             <div class="row justify-content-center">
                                 <div class="col-auto col">
-                                    <input id="review-name" type="text" class="form-control-lg text-center mb-3" placeholder="Review Name Here">
+                                    <input id="review-name" type="text" class="form-control-lg text-center mb-3"
+                                        placeholder="Review Name Here">
                                 </div>
                             </div>
                             <div class="row justify-content-center">
-                                    <div class="col-auto col mb-4 star-ratings">
-                                        <span id="rating1" class="fa fa-star" rating="1"></span>
-                                        <span id="rating2"class="fa fa-star" rating="2"></span>
-                                        <span id="rating3"class="fa fa-star" rating="3"></span>
-                                        <span id="rating4" class="fa fa-star" rating="4"></span>
-                                        <span id="rating5" class="fa fa-star" rating="5"></span>
-                                    </div>
+                                <div class="col-auto col mb-4 star-ratings">
+                                    <span id="rating1" class="fa fa-star" rating="1"></span>
+                                    <span id="rating2" class="fa fa-star" rating="2"></span>
+                                    <span id="rating3" class="fa fa-star" rating="3"></span>
+                                    <span id="rating4" class="fa fa-star" rating="4"></span>
+                                    <span id="rating5" class="fa fa-star" rating="5"></span>
+                                </div>
                             </div>
-                            <div class="row justify-content-center">
-                                    <div id="review-map" class="col-auto col border p-5">
-                                        GOOGLE MAP API STUFF HERE
-                                    </div>
+                            <div class="row">
+                                <div id="review-map" class="col-12 col p-5 border">
+                                    GOOGLE MAP API STUFF HERE
+                                </div>
                             </div>
-
-
                         </div>
                         <div class="col">
-                            <div id="review-Category">
+                            <div id="review-Category" class="my-2 mb-md-4 mt-md-4 mx-3">
                                 <label for="reviewCategory" class="font-weight-bold">Category</label>
-                                <select id="review-categories-select" class="form-control-lg mt-2 mt-md-4 mb-5 mx-3 bg-white">
+                                <select id="review-categories-select" class="form-control-lg bg-white">
                                     <option selected>Choose Category...</option>
                                     <option value="Beer">Beer</option>
                                     <option value="Restaurant">Restaurant</option>
@@ -89,30 +89,24 @@
                                 <label for="reviewComments" class="font-weight-bold">Comments</label>
                                 <textarea class="form-control" id="reviewComments" rows="10"></textarea>
                             </div>
-                            <button id="review-bttnSave" class="btn btn-success mt-3 float-right">Close</button>
+                            <button id="review-bttnSave" class="btn btn-success mt-3 px-3 float-right">Close</button>
                         </div>
                     </div>
-                </div> 
+                <!-- </div> -->
             </div>
-
-
-
         </div>
-    </div>
-    <!-- To get the sticky footer (fixed-bottom) to fit the same with as the rest of the site -->
-    <div class="container fixed-bottom">  
         <div id="row-footer" class="row">
             <div id="footer-left" class="col-3 footer text-center text-white">
                 <img id="imgSkull" class="footer-imgs" src="assets/images/skull.png" alt="Skull">
             </div>
             <div id="footer-center" class="col footer pb-2 text-center text-white align-self-end">
-                Copyright © 2019  Exceptional Pirates Inc
+                Copyright © 2019 Exceptional Pirates Inc
             </div>
             <div id="footer-right" class="col-3 footer text-center text-white">
                 <img id="imgShip" class="footer-imgs" src="assets/images/flag.gif" alt="flag">
             </div>
         </div>
-    </div>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
