--- a/content-form.html
+++ b/content-form.html
@@ -46,53 +46,56 @@
                     Restaurants
                 </div>
             </div>
-
-            <div id="review-content" class="col col-12 col-md-8 col-content ml-md-4 my-md-5 p-3 bg-white border">
-                <!-- <div id="review-content-item" class="m-4 p-3 bg-white border shadow-default"> -->
-                    <div class="row">
-                        <div class="col">
-                            <div class="row justify-content-center">
-                                <img id="review-img" class="mb-2" src="assets/images/avatars/avatar-placeholder.png"
-                                    alt="Review Item Name">
+            <div id="review-content" class="col col-12 col-md-9 col-content">
+                <div id="row-form" class="row">
+                    <div id="col-form" class="col px-md-5 py-md-5">
+                        <div class="card">
+                            <div class="card-header text-white h5">
+                                Review Details
                             </div>
-                            <div class="row justify-content-center">
-                                <div class="col-auto col">
-                                    <input id="review-name" type="text" class="form-control-lg text-center mb-3"
-                                        placeholder="Review Name Here">
+                            <div class="card-body">
+                                <div class="form-group">
+                                    <img id="review-img" class="mb-2" src="assets/images/avatars/avatar-placeholder.png"
+                                        alt="Review Item Name">
                                 </div>
-                            </div>
-                            <div class="row justify-content-center">
-                                <div class="col-auto col mb-4 star-ratings">
-                                    <span id="rating1" class="fa fa-star" rating="1"></span>
-                                    <span id="rating2" class="fa fa-star" rating="2"></span>
-                                    <span id="rating3" class="fa fa-star" rating="3"></span>
-                                    <span id="rating4" class="fa fa-star" rating="4"></span>
-                                    <span id="rating5" class="fa fa-star" rating="5"></span>
+                                <div class="form-group">
+                                    <input id="review-name" type="text" class="form-control-lg mb-3" placeholder="Review Name Here">
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div id="review-map" class="col-12 col p-5 border">
-                                    GOOGLE MAP API STUFF HERE
+                                <div class="form-group">
+                                    <div class="col-auto col mb-4 star-ratings">
+                                        <span id="rating1" class="fa fa-star" rating="1"></span>
+                                        <span id="rating2" class="fa fa-star" rating="2"></span>
+                                        <span id="rating3" class="fa fa-star" rating="3"></span>
+                                        <span id="rating4" class="fa fa-star" rating="4"></span>
+                                        <span id="rating5" class="fa fa-star" rating="5"></span>
+                                    </div>
                                 </div>
+                                <div class="form-group">
+                                    <div id="review-Category" class="my-2 mb-md-4 mt-md-4 mx-3">
+                                        <!-- <label for="reviewCategory" class="font-weight-bold">Category</label> -->
+                                        <select id="review-categories-select" class="form-control-lg bg-white">
+                                            <option selected>Choose Category...</option>
+                                            <option value="Beer">Beer</option>
+                                            <option value="Restaurant">Restaurant</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div id="review-comments">
+                                        <label for="reviewComments" class="font-weight-bold">Comments</label>
+                                        <textarea class="form-control" id="reviewComments" rows="5"></textarea>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div id="review-map" class="col-12 col p-5 border">
+                                        GOOGLE MAP API STUFF HERE
+                                    </div>
+                                </div>
+                                <button id="review-bttnSave" class="btn mt-3 px-3 float-right text-white"><span class="h6">Close</span></button>
                             </div>
-                        </div>
-                        <div class="col">
-                            <div id="review-Category" class="my-2 mb-md-4 mt-md-4 mx-3">
-                                <label for="reviewCategory" class="font-weight-bold">Category</label>
-                                <select id="review-categories-select" class="form-control-lg bg-white">
-                                    <option selected>Choose Category...</option>
-                                    <option value="Beer">Beer</option>
-                                    <option value="Restaurant">Restaurant</option>
-                                </select>
-                            </div>
-                            <div id="review-comments">
-                                <label for="reviewComments" class="font-weight-bold">Comments</label>
-                                <textarea class="form-control" id="reviewComments" rows="10"></textarea>
-                            </div>
-                            <button id="review-bttnSave" class="btn btn-success mt-3 px-3 float-right">Close</button>
                         </div>
                     </div>
-                <!-- </div> -->
+                </div>
             </div>
         </div>
         <div id="row-footer" class="row">
@@ -106,7 +109,7 @@
                 <img id="imgShip" class="footer-imgs" src="assets/images/flag.gif" alt="flag">
             </div>
         </div>
-</div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
