--- a/content-form.html
+++ b/content-form.html
@@ -60,8 +60,8 @@
                                             <img id="review-img" src="assets/images/avatars/avatar-placeholder.png" alt="Review Item Name">
                                         </div>
                                         <div class="form-group m-0">
-                                            <input id="review-name" type="text" class="h5 text-center w-100 py-0 py-md-2" maxlength="30"
-                                                placeholder="Review Name Here">
+                                            <input id="review-name" type="text" class="h5 text-center w-100 py-0 py-md-2"
+                                                maxlength="30" placeholder="Review Name Here">
                                         </div>
                                         <div class="form-group m-0">
                                             <div class="col-auto col mb-4 star-ratings">
@@ -90,7 +90,7 @@
                                                 <textarea class="form-control" id="reviewComments" rows="5"></textarea>
                                             </div>
                                         </div>
-                                    </div>  
+                                    </div>
                                 </div>
                                 <div class="form-group mt-3">
                                     <div id="review-map" class="col-12 col p-5 border">
@@ -98,28 +98,29 @@
                                     </div>
                                 </div>
                                 <button id="review-bttnSave" class="btn mt-3 px-3 float-right text-white"><span class="h6">Close</span></button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div id="row-footer" class="row">
-            <div id="footer-left" class="col-3 footer text-center text-white">
-                <img id="imgSkull" class="footer-imgs" src="assets/images/skull.png" alt="Skull">
-            </div>
-            <div id="footer-center" class="col footer pb-2 text-center text-white align-self-end">
-                Copyright © 2019 Exceptional Pirates Inc
-            </div>
-            <div id="footer-right" class="col-3 footer text-center text-white">
-                <img id="imgShip" class="footer-imgs" src="assets/images/flag.gif" alt="flag">
+            <div id="row-footer" class="row">
+                <div id="footer-left" class="col-3 footer text-center text-white">
+                    <img id="imgSkull" class="footer-imgs" src="assets/images/skull.png" alt="Skull">
+                </div>
+                <div id="footer-center" class="col footer pb-2 text-center text-white align-self-end">
+                    Copyright © 2019 Exceptional Pirates Inc
+                </div>
+                <div id="footer-right" class="col-3 footer text-center text-white">
+                    <img id="imgShip" class="footer-imgs" src="assets/images/flag.gif" alt="flag">
+                </div>
             </div>
         </div>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-    <script src="assets/javascript/javascript.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+        <script src="assets/javascript/javascript.js"></script>
 </body>
 
 </html>
