--- a/content.html
+++ b/content.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <link rel="stylesheet" href="assets/styles/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
     <title>MyReviews</title>
@@ -30,8 +31,8 @@
                 </div>
                 <div id="row-username" class="row">
                     <div id="username" class="col text-right pr-md-1">
-                        <a href="index.html">not &lt;username&gt;?</a>  
-                    </div>  
+                        <a href="index.html">not &lt;username&gt;?</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -52,26 +53,23 @@
                 </div>  
             </div>
         </div>
-    </div>
-    <!-- To get the sticky footer (fixed-bottom) to fit the same with as the rest of the site -->
-    <div class="container fixed-bottom">  
-        <div id="row-footer" class="row">
-            <div id="footer-left" class="col-3 footer text-center text-white">
-                <img id="imgSkull" class="footer-imgs" src="assets/images/skull.png" alt="Skull">
-            </div>
-            <div id="footer-center" class="col footer pb-2 text-center text-white align-self-end">
-                Copyright © 2019  Exceptional Pirates Inc
-            </div>
-            <div id="footer-right" class="col-3 footer text-center text-white">
-                <img id="imgShip" class="footer-imgs" src="assets/images/flag.gif" alt="flag">
+            <div id="row-footer" class="row">
+                <div id="footer-left" class="col-3 footer text-center text-white">
+                    <img id="imgSkull" class="footer-imgs" src="assets/images/skull.png" alt="Skull">
+                </div>
+                <div id="footer-center" class="col footer pb-2 text-center text-white align-self-end">
+                    Copyright © 2019 Exceptional Pirates Inc
+                </div>
+                <div id="footer-right" class="col-3 footer text-center text-white">
+                    <img id="imgShip" class="footer-imgs" src="assets/images/flag.gif" alt="flag">
+                </div>
             </div>
         </div>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-    <script src="assets/javascript/javascript.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+        <script src="assets/javascript/javascript.js"></script>
 </body>
 
 </html>
