Fix the footer and use html header, main and footer tags

--- a/content-form.html
+++ b/content-form.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="container container-fluid border bg-light">
+    <header class="container container-fluid border ">
         <div id="row-header" class="row pl-3 bg-white border align-items-center">
             <div id="header-logo" class="col-2 col-md-2 text-center">
                 <img id="imgLogo" class="header-imgs" src="assets/images/logo.png" alt="logo MyReviews">
@@ -36,6 +36,8 @@
                 </div>
             </div>
         </div>
+    </header>
+    <main class="container bg-light">
         <div id="row-content" class="row">
             <div id="review-categories" class="col col-12 col-md-3 col-content px-0">
                 <button id="bttn-createReview" class="w-100 py-3 m-0 h3">Create Review</button>
@@ -104,23 +106,25 @@
                 </div>
             </div>
         </div>
-            <div id="row-footer" class="row">
-                <div id="footer-left" class="col-3 footer text-center text-white">
-                    <img id="imgSkull" class="footer-imgs" src="assets/images/skull.png" alt="Skull">
-                </div>
-                <div id="footer-center" class="col footer pb-2 text-center text-white align-self-end">
-                    Copyright © 2019 Exceptional Pirates Inc
-                </div>
-                <div id="footer-right" class="col-3 footer text-center text-white">
-                    <img id="imgShip" class="footer-imgs" src="assets/images/flag.gif" alt="flag">
-                </div>
+    </main>
+    <footer class="container">
+        <div id="row-footer" class="row">
+            <div id="footer-left" class="col-3 footer text-center text-white">
+                <img id="imgSkull" class="footer-imgs" src="assets/images/skull.png" alt="Skull">
+            </div>
+            <div id="footer-center" class="col footer pb-2 text-center text-white align-self-end">
+                Copyright © 2019 Exceptional Pirates Inc
+            </div>
+            <div id="footer-right" class="col-3 footer text-center text-white">
+                <img id="imgShip" class="footer-imgs" src="assets/images/flag.gif" alt="flag">
             </div>
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            crossorigin="anonymous"></script>
-        <script src="assets/javascript/javascript.js"></script>
+    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <script src="assets/javascript/javascript.js"></script>
 </body>
 
 </html>
