--- a/content.-reviews.html
+++ b/content.-reviews.html
@@ -48,14 +48,15 @@
                         Restaurants
                     </div>
                 </div>
+
                 <div id="review-content" class="col col-12 col-md-9 col-content">
-                    <!-- REVIEW POPULATION HERE -->
-                    <div id="review-id" class="review-summaries border border-dark rounded float-left">
+            <!-- [START] AUTO-POPULATE THIS DIV PER REVIEW ITEM -->
+                    <div id="review-id" class="review-summaries mx-md-3 my-md-3">
                         <!-- review.name -->
-                        Shinerbock
+                        <h5>Shinerbock</h5>
                         <!-- review.rating -->
                         <div class="form-group static-rating m-0">
-                            <div class="col-auto col mb-4 star-ratings-static">
+                            <div class="col-auto col star-ratings-static">
                                 <span id="rating1" class="fa fa-star" rating="1"></span>
                                 <span id="rating2" class="fa fa-star" rating="2"></span>
                                 <span id="rating3" class="fa fa-star" rating="3"></span>
@@ -64,6 +65,22 @@
                             </div>
                         </div>
                     </div>
+                    <div id="review-id" class="review-summaries mx-md-3 my-md-3">
+                        <!-- review.name -->
+                        <h5>Guinness</h5>
+                        <!-- review.rating -->
+                        <div class="form-group static-rating m-0">
+                            <div class="col-auto col star-ratings-static">
+                                <span id="rating1" class="fa fa-star" rating="1"></span>
+                                <span id="rating2" class="fa fa-star" rating="2"></span>
+                                <span id="rating3" class="fa fa-star" rating="3"></span>
+                                <span id="rating4" class="fa fa-star" rating="4"></span>
+                                <span id="rating5" class="fa fa-star" rating="5"></span>
+                            </div>
+                        </div>
+                    </div>
+
+            <!-- [END] AUTO-POPULATE THIS DIV PER REVIEW ITEM --> 
                 </div>
 
             </div>
